# simtom

./: .dockerignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
docs/data_guides/: bnpl.md
docs/data_guides/ecommerce/: bnpl.md
scripts/: run_server.py
simtom/: __init__.py
simtom/api/: __init__.py  main.py  models.py  routes.py
simtom/core/: __init__.py  arrival_patterns.py  entities.py  generator.py  holidays.py  registry.py
simtom/generators/: __init__.py
simtom/generators/ecommerce/: __init__.py  base.py  bnpl.py
simtom/scenarios/: __init__.py
simtom/utils/: __init__.py
tests/: __init__.py
tests/integration/: test_volume_distribution.py
tests/unit/: test_arrival_patterns.py  test_bnpl_generator.py  test_entities.py  test_generator.py  test_registry.py
