[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simtom"
version = "0.1.0"
description = "Realistic data simulator for ML system testing with time-compressed scenarios and controlled drift"
authors = ["whitehackr"]
readme = "README.md"
packages = [{include = "simtom"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
faker = "^20.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
ruff = "^0.1.0"
mypy = "^1.6.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "W", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true